projects/vb6parse/snapshots/syntax/statements/system_interaction/sendkeys/sendkeys_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/sendkeys.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SendKeysStatement
      children:
        - kind: SendKeysKeyword
          text: SendKeys
        - kind: Whitespace
          text: "   "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Text\""
            - kind: Whitespace
              text: "  "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "   "
            - kind: Argument
              children:
                - kind: BooleanLiteralExpression
                  children:
                    - kind: TrueKeyword
                      text: "True"
    - kind: Newline
      text: "\n"
